--- a/frame/pool/Cargo.toml
+++ b/frame/pool/Cargo.toml
@@ -9,13 +9,9 @@ rust-version = "1.56"
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
-[dependencies.codec]
-default-features = false
-features = ["derive"]
-package = "parity-scale-codec"
-version = "2.0.0"
-
 [dependencies]
+codec = {default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.0.0"}
+
 frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
 frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"  }
 frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
@@ -25,6 +21,7 @@ sp-arithmetic = { default-features = false, git = "https://github.com/paritytech
 sp-io = { default-features = false,  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
 sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
 sp-std = { default-features = false,  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
+
 fixed = "1.9.0"
 hydra-dx-math = { default-features = false, git = "https://github.com/galacticcouncil/HydraDX-math" }
 approx = "0.3.0"
@@ -32,14 +29,12 @@ approx = "0.3.0"
 composable-traits = { version = "0.0.1", path = "../composable-traits", default-features = false }
 vault = { version = "0.0.1", package = "pallet-vault", path = "../vault", default-features = false, optional = true }
 
-log = { version = "0.4.14", default-features = false }
 num-traits = { version = "0.2.14", default-features = false }
 num-integer = { version = "0.1", default-features = false }
-bitflags = "1.3.2"
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
+# dependendices only for tests
 [dev-dependencies]
-once_cell = "1.8.0"
 proptest = "0.9.6"
 serde = "1.0.119"
 orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "17a791edf431d7d7aee1ea3dfaeeb7bc21944301" }
@@ -51,7 +46,6 @@ composable-tests-helpers = { version = "0.0.1", path = "../composable-tests-help
 default = ["std"]
 std = [
     "codec/std",
-    "log/std",
     "frame-support/std",
     "frame-system/std",
     "sp-runtime/std",
@@ -69,4 +63,3 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
 ]
-
