--- a/frame/composable-traits/Cargo.toml
+++ b/frame/composable-traits/Cargo.toml
@@ -17,6 +17,7 @@ sp-runtime = { default-features = false, git = "https://github.com/paritytech/su
 sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 xcm = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
 
+fixed = "1.9.0"
 bitflags = "1.3.2"
 composable-support = { default-features = false, path = "../composable-support" }
 plotters = { version = "0.3.1", optional = true }
