--- a/frame/instrumental-strategy-pablo/Cargo.toml
+++ b/frame/instrumental-strategy-pablo/Cargo.toml
@@ -25,6 +25,7 @@ codec = { default-features = false, package = "parity-scale-codec", version = "3
 log = { version = "0.4.14", default-features = false }
 scale-info = { version = "2.1.2", default-features = false, features = ["derive",] }
 serde = { version = '1', optional = true }
+rust_decimal = { version = "1", default-features = false, features = ["maths"] }
 
 [dev-dependencies]
 hex-literal = "0.3.3"
