--- a/frame/options-pricing/Cargo.toml
+++ b/frame/options-pricing/Cargo.toml
@@ -31,6 +31,7 @@ sp-std = { default-features = false, git = "https://github.com/paritytech/substr
 
 [dev-dependencies]
 frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
+greeks = "0.5.0"
 itertools = "0.10"
 orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "b57f88b39cd547e2fb51727d8bb9bcc64fddf8b5" }
 pallet-assets = { path = "../assets", default-features = false }
