--- a/xcvm/cosmwasm/contracts/router/Cargo.toml
+++ b/xcvm/cosmwasm/contracts/router/Cargo.toml
@@ -20,15 +20,18 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-std = "1.0.0"
+cosmwasm-std = { version = "1.0.0", features = ["abort"] }
 cosmwasm-storage = "1.0.0"
 cw-storage-plus = "0.13.2"
 schemars = "0.8.8"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 xcvm-core = { path = "../../../lib/core", features = ["std"] }
 xcvm-interpreter = { path = "../interpreter", features = ["library"] }
+xcvm-asset-registry = { path = "../asset-registry", features = ["library"] }
+cw20 = { git = "https://github.com/CosmWasm/cw-plus.git" }
 thiserror = { version = "1.0.31" }
 
 [dev-dependencies]
 cw-multi-test = "0.13.2"
 cosmwasm-schema = "1.0.0"
+serde-json-wasm = { git = "https://github.com/hussein-aitlahcen/serde-json-wasm", rev = "1608a13d2a2ba90605d9626a51ff6667aca5a2d6" }
