--- a/xcvm/cosmwasm/contracts/asset-registry/Cargo.toml
+++ b/xcvm/cosmwasm/contracts/asset-registry/Cargo.toml
@@ -17,10 +17,11 @@ crate-type = ["cdylib", "rlib"]
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
+backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-std = "1.0.0"
+cosmwasm-std = { version = "1.0.0" }
 cw-storage-plus = "0.13.2"
 schemars = "0.8.8"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
