--- a/xcvm/cosmwasm/contracts/interpreter/Cargo.toml
+++ b/xcvm/cosmwasm/contracts/interpreter/Cargo.toml
@@ -20,10 +20,11 @@ crate-type = ["cdylib", "rlib"]
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
+backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-std = "1.0.0"
+cosmwasm-std = { version = "1.0.0" }
 cw-storage-plus = "0.13.2"
 cw20 = { git = "https://github.com/CosmWasm/cw-plus.git" }
 num = "0.4"
