--- a/subsquid/package.json
+++ b/subsquid/package.json
@@ -13,12 +13,13 @@
     "query-node:start": "squid-graphql-server",
     "lint": "npm run lint:prod -- --fix",
     "lint:prod": "eslint . --ext .ts --ignore-path .gitignore --max-warnings 0",
-    "test": "ts-mocha -p tsconfig-test.json test/**/*.test.ts",
+    "test": "ts-mocha -p tsconfig-test.json src/test/**/*.test.ts",
     "typegen": "npm run generate:meta && npm run generate:defs",
     "generate:defs": "ts-node node_modules/.bin/polkadot-types-from-defs --package ./src/interfaces --input ./src/interfaces --endpoint ws://127.0.0.1:9988",
     "generate:meta": "ts-node node_modules/.bin/polkadot-types-from-chain --package ./src/interfaces --endpoint ws://127.0.0.1:9988 --output ./src/interfaces"
   },
   "dependencies": {
+    "@polkadot/api": "^9.3.3",
     "@subsquid/archive-registry": "^0.0.6",
     "@subsquid/cli": "latest",
     "@subsquid/graphql-server": "latest",
@@ -35,12 +36,10 @@
     "graphql": "^15.8.0",
     "pg": "^8.7.3",
     "ts-mockito": "^2.6.1",
-    "type-graphql": "^1.2.0-rc.1",
-    "typeorm": "^0.2.41"
+    "type-graphql": "^1.2.0-rc.1"
   },
   "devDependencies": {
-    "@subsquid/substrate-metadata-explorer": "^0.0.8",
-    "@subsquid/substrate-typegen": "^0.4.2",
+    "@polkadot/typegen": "^9.3.3",
     "@types/big.js": "^6.1.3",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
