--- a/subsquid/tsconfig.json
+++ b/subsquid/tsconfig.json
@@ -13,7 +13,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "subsquid": ["src/*"],
+      "subsquid/*": ["src/*"],
       "@polkadot/api/augment": ["src/interfaces/augment-api.ts"],
       "@polkadot/types/augment": ["src/interfaces/augment-types.ts"]
     }
