--- a/code/Cargo.toml
+++ b/code/Cargo.toml
@@ -67,6 +67,7 @@ members = [
   "centauri/light-clients/common",
   "centauri/light-clients/ics07-tendermint",
   "centauri/light-clients/ics10-grandpa",
+  "centauri/light-clients/ics10-grandpa-sys",
   "centauri/light-clients/ics11-beefy",
   "centauri/light-clients/ics13-near",
 
