--- a/code/parachain/frame/composable-traits/Cargo.toml
+++ b/code/parachain/frame/composable-traits/Cargo.toml
@@ -9,6 +9,8 @@ version = "0.0.1"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+change-set = { path = "../change-set" }
+change-set-derive = { path = "../change-set-derive" }
 frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27" }
