--- a/cosmwasm/contracts/xcm-executor/Cargo.toml
+++ b/cosmwasm/contracts/xcm-executor/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0.147", default-features = false, features = [
     "alloc",
 ] }
 cw-storage-plus = { version = "0.16.0", default-features = false }
-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25" }
+xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "gav-xcm-v3" }
 
 parity-scale-codec = { version = "3.1.5", default-features = false, features = [
     "derive",
@@ -27,10 +27,10 @@ parity-scale-codec = { version = "3.1.5", default-features = false, features = [
 cw-multi-test = "0.16.0"
 
 [features]
-default = ["std"]
+default = []
 std = [
     "parity-scale-codec/std", 
-    "xcm/std", 
+     "xcm/std", 
     ]
 no_std = ["cosmwasm-std/no_std"]
 
