feat(tge): rename `composable-cli` to `composable-ops` and fixup investors list

--- a/code/ops/Cargo.toml
+++ b/code/ops/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "composable-cli"
+name = "composable-ops"
 version = "0.1.0"
 edition = "2021"
 authors = [ "Composable Developers" ]
