--- a/cosmwasm/contracts/xcm-executor/Cargo.toml
+++ b/cosmwasm/contracts/xcm-executor/Cargo.toml
@@ -27,9 +27,11 @@ parity-scale-codec = { version = "3.1.5", default-features = false, features = [
 cw-multi-test = "0.16.0"
 
 [features]
-default = []
+default = ["disable_target_static_assertions"]
 std = ["parity-scale-codec/std", "xcm/std"]
 no_std = ["cosmwasm-std/no_std"]
+
+disable_target_static_assertions = []
 
 [profile.release]
 lto = true
